wine_cellar/assets/css/detail.css
.wine-detail__image {
    height: 237px;
    width: 158px;
    background-color: white;
    border-radius: 15px;
    text-align: center;
    box-shadow: var(--container-box-shadow);
    padding: 6px;
    box-sizing: border-box;
    margin-inline: auto;
    margin-block-end: 2rem;
    
    img {
      height: 100%;
      width: auto;
      max-width: 100%;
      border-radius: 12px;
      object-fit: cover;
    }

  @media screen and (min-width: 48em) {
    margin-inline-start: auto;
    margin-inline-end: 3rem;
    margin-block-start: 0.5rem;
  }
}

.wine-detail__table {
  text-align: left;
  margin: auto;

  @media screen and (min-width: 48em) {
    margin-inline-start: 1rem;
    margin-inline-end: auto;
  }

  th {
    vertical-align: top;
    min-width: 7rem;
  }
}

.wine-detail__menu { 
  margin-bottom: 32px;
}

/* .wine-detail__stock {
  h2 {
  margin-bottom: 0px;
  }
  margin-bottom: 12px;
} */


.wine-detail__stock-table {
  text-align: left;
  margin: 1rem auto;
  border-collapse: collapse;
  min-width: 100%;
}

